# markitdown_gui

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MarkItDown.spec  README.md  console_panel.py  converter.py  docker-compose.yml  gui.py  i18n.py  logger_config.py  main.py  predictor.py  pyproject.toml  setup.iss
docker/: entrypoint.sh
